--- a/index.html
+++ b/index.html
@@ -22,65 +22,70 @@
         <div class="filter" id="filter--blue"></div>
         <div class="sidebar container">
             <div class="row">
-                <div class="col-12">
-                    <div class="sidebar__logo"></div>
+                <div class="col-12"> 
+                    <div class="sidebar__logo" title="Logo do Guia do Transporte"></div>
                 </div>
-                <ul class="sidebar__list" role="navigation">
-                    <button role="button" title="Fechar o menu" tabindex="0">X</button>
+                <ul class="sidebar__list" role="navigation" aria-expanded="true">
+                    <button role="button" class="sidebar__list__btn--close" title="Fechar o menu" tabindex="0"> 
+                    <i class="fas fa-times fa-lg">
+
+                    </i> 
+                </button>
+                    <span class="sr-only">Botão para fechar o menu</span>
                     <!-- Adicione a classe active na li quando for a página selecionada -->
-                    <li class="sidebar__list__item active col-12">
-                        <a href="index.html" class="d-flex" role="menuitem" title="Inicio" tabindex="0">
+                    <li class="sidebar__list__item active col-12" role="menuitem">
+                        <a href="index.html" class="d-flex" title="Inicio" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-home fa-lg mx-2"></i></span>
                             Inicio
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item col-12">
-                        <a href="transportadoras.html" class="d-flex" role="menuitem" title="Transportadoras" tabindex="0">
+                    <li class="sidebar__list__item col-12" role="menuitem">
+                        <a href="transportadoras.html" class="d-flex" title="Transportadoras" tabindex="0" role="link" role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-building fa-lg mx-2"></i></span>
                             Transportadoras
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item col-12">
-                        <a href="#" class="d-flex" role="menuitem" title="Cotação" tabindex="0">
+                    <li class="sidebar__list__item col-12" role="menuitem">
+                        <a href="#" class="d-flex" title="Cotação" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i
                                     class="fas fa-clipboard-list fa-lg mx-2"></i></span>
                             Cotação
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item col-12">
-                        <a href="#" class="d-flex" role="menuitem" title="Origem e Destino" tabindex="0">
+                    <li class="sidebar__list__item col-12" role="menuitem">
+                        <a href="#" class="d-flex" title="Origem e Destino" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i
                                     class="fas fa-map-marker-alt fa-lg mx-2"></i></span>
                             Origem e Destino
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item col-12">
-                        <a href="#" class="d-flex" role="menuitem" title="Blog" tabindex="0">
+                    <li class="sidebar__list__item col-12" role="menuitem">
+                        <a href="#" class="d-flex" title="Blog" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i class="fab fa-blogger-b fa-lg mx-2"></i></span>
                             Blog
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item col-12">
-                        <a href="#" class="d-flex" role="menuitem" title="Sobre Nós" tabindex="0">
+                    <li class="sidebar__list__item col-12" role="menuitem">
+                        <a href="#" class="d-flex" title="Sobre Nós" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-users fa-lg mx-2"></i></span>
                             Sobre Nós
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item">
-                        <a href="#" class="d-flex" role="menuitem" title="Políticas e Termos" tabindex="0">
+                    <li class="sidebar__list__item" role="menuitem">
+                        <a href="#" class="d-flex" title="Políticas e Termos" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-book fa-lg mx-2"></i></span>
                             Políticas e Termos
                         </a>
                     </li>
 
-                    <li class="sidebar__list__item col-12" title="Cadastre-se" tabindex="0">
-                        <a href="#" class="d-flex justify-content-center" role="menuitem">
+                    <li class="sidebar__list__item col-12" title="Cadastre-se" tabindex="0" role="menuitem">
+                        <a href="#" class="d-flex justify-content-center" role="link">
                             <i class="fas fa-sign-in-alt fa-lg mx-2"></i> </span>
                             Cadastre-se
                         </a>
@@ -93,13 +98,13 @@
     <!-- Visivel apenas em dispositivos mobile. Barra de baixar o aplicativo -->
     <section class="download-app fixed-top d-block d-lg-none">
         <div class="download-app__group">
-            <div class="download-app__group__text">
+            <div class="download-app__group__text" id="download__app">
                 Baixe o nosso App
             </div>
-            <div>
-                <button class="download-app__group__btn rounded">
+            <div class="d-flex">
+                <a href="#" class="download-app__group__btn rounded" aria-describedby="download__app">
                     Baixar
-                </button>
+                </a>
             </div>
         </div>
     </section>
@@ -196,9 +201,10 @@
                         <div class="col-lg-auto col-md-auto col-12">
                             <button class="btn quotation__form__btn topbar__form__field rounded" role="button"
                                 type="submit">
-                                <span class="quotation__form__btn--icon">
+                                <span class="quotation__form__btn--icon" aria-hidden="true">
                                     <i class="fas fa-search fa-lg"></i>
                                 </span>
+                                <span class="sr-only">Botão de Pesquisar</span>
                             </button>
                         </div>
                     </form>
@@ -206,7 +212,7 @@
         </section>
 
         <!-- Divisor da Navbar -->
-        <div class="topbar__divider" role="separator"></div>
+        <div class="topbar__divider" role="separator" aria-hidden="true"></div>
 
         <!-- Formulario do Hero -->
         <section class="quotation container">
@@ -261,9 +267,10 @@
                     </div>
                     <div class="col-lg-2 col-md-2 col-12">
                         <button class="btn quotation__form__btn rounded" role="button" type="submit">
-                            <span class="quotation__form__btn--icon">
+                            <span class="quotation__form__btn--icon" aria-hidden="true">
                                 <i class="fas fa-search fa-lg"></i>
                             </span>
+                            <span class="sr-only">Botão de Pesquisar</span>
                         </button>
                     </div>
                 </form>
@@ -325,9 +332,10 @@
 
         <!-- Propaganda -->
         <section class="advertising container">
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" tabindex="-1" aria-hidden="true" role="banner">
                 <div class="advertising__announce">
                 </div>
+                <span class="sr-only">Propaganda</span>
             </a>
         </section>
 
@@ -339,7 +347,7 @@
             <h3 class="rotes__subtitle">
                 Veja abaixo as rotas mais buscadas
             </h3>
-            <ul class="rotes__list row">
+            <ul class="rotes__list row" role="list">
                 <!-- 30 rotas no total -->
                 <div class="col-lg-4 col-md-6 col-12">
                     <li class="rotes__list__item">
@@ -955,14 +963,14 @@
                     <div class="col-md-3 d-none d-md-block">
                         <div class="app__image--cell">
                             <img src="img/celular-aplicativo.png" id="app__image--cell--anim"
-                                alt="Celular com o aplicativo do Mais Cargas">
+                                alt="Celular com o aplicativo do Guia do Transporte" title="Aplicativo Guia do Transporte">
                         </div>
                     </div>
                     <div class="col-md-9 col-12">
                         <div class="row">
                             <div class="col-12 d-block d-md-none">
                                 <div class="app__image--cell">
-                                    <img src="img/celular-aplicativo.png" alt="Celular com o aplicativo do Mais Cargas">
+                                    <img src="img/celular-aplicativo.png" alt="Celular com o aplicativo do Guia do Transporte" title="Aplicativo Guia do Transporte">
                                 </div>
                             </div>
                             <div class="col-12">
@@ -1006,7 +1014,7 @@
                         </h3>
                     </div>
                 </div>
-                <article class="col-lg-4 col-md-6 col-12">
+                <article class="col-lg-4 col-md-6 col-12" role="article">
                     <a href="#" target="_blank">
                         <div class="card blog__item">
                             <div class="blog__image">
@@ -1024,7 +1032,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="col-lg-4 col-md-6 col-12">
+                <article class="col-lg-4 col-md-6 col-12" role="article">
                     <a href="#" target="_blank">
                         <div class="card blog__item">
                             <div class="blog__image">
@@ -1041,7 +1049,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="col-4 d-lg-block d-none">
+                <article class="col-4 d-lg-block d-none" role="article">
                     <a href="#" target="_blank">
                         <div class="card blog__item">
                             <div class="blog__image">
@@ -1141,10 +1149,10 @@
                                 Siga-nos nas redes sociais
                             </h3>
                             <div class="footer__link">
-                                <a href="#" target="_blank" class="footer__link__item--blue">
+                                <a href="#" target="_blank" class="footer__link__item--blue" role="link">
                                     <i class="fab fa-facebook-square"></i> Facebook
                                 </a>
-                                <a href="#" target="_blank" class="footer__link__item--purple">
+                                <a href="#" target="_blank" class="footer__link__item--purple" role="link">
                                     <i class="fab fa-instagram"></i> Instagram
                                 </a>
                             </div>
