added meta / headers adjust

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="O maior Guia do Transporte do Brasil. Busque e encontre transportadoras credenciadas para a sua carga!">
+    <meta name="theme-color" content="#1565C0">
+    <meta name="robots" content="index, follow">
+    <meta name="Language" content="Portuguese">
+    <meta name="city" content="São Paulo">
+    <meta name="country" content="Brazil">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://guiadotransporte.com.br">
+    <meta property="og:image" content="https://guiadotransporte.com.br/images/guia-do-transporte-og.jpg">
+    <meta property="og:size_name" content="Guia do Transporte">
+    <meta property="og:locale:alternate" content="pt_BR">
+    <meta http-equiv="content-language" content="pr-br">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <meta name="Revisit-After" content="1 day">
     <title>O Melhor Guia de Transporte - Guia do Transporte</title>
     <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -294,9 +308,9 @@
                             <i class="fas fa-map-marked-alt fa-lg"></i>
                         </span>
                     </div>
-                    <h3 class="explanation__card__title">
+                    <h4 class="explanation__card__title">
                         Digite Origem e Destino
-                    </h3>
+                    </h4>
                     <p class="explanation__card__text">
                         Escolha a origem e o destino de sua carga, assim irá melhorar a busca das transportadoras
                     </p>
@@ -307,9 +321,9 @@
                             <i class="fas fas fa-search fa-lg"></i>
                         </span>
                     </div>
-                    <h3 class="explanation__card__title">
+                    <h4 class="explanation__card__title">
                         Pressione Buscar
-                    </h3>
+                    </h4>
                     <p class="explanation__card__text">
                         Sem muito segredo, agora é só clicar em buscar e aguardar carregar a lista de Transportadoras
                     </p>
@@ -320,9 +334,9 @@
                             <i class="fas fa-clipboard-list fa-lg"></i>
                         </span>
                     </div>
-                    <h3 class="explanation__card__title">
+                    <h4 class="explanation__card__title">
                         Solicite Cotação
-                    </h3>
+                    </h4>
                     <p class="explanation__card__text">
                         Escolha as transportadoras, clique em “Solicitar Cotação” e envie os dados da sua carga
                     </p>
@@ -1024,10 +1038,10 @@
                                 <span class="blog__content__tag">
                                     Notícias Transportes
                                 </span>
-                                <div class="blog__content__text">
+                                <h4 class="blog__content__text">
                                     Aplicativos de transporte | Com mais de 500 mil veículos cadastrados na capital
                                     Paulista, judicializaram fiscalização, diz CMUV em CPI
-                                </div>
+                                </h4>
                             </div>
                         </div>
                     </a>
@@ -1042,9 +1056,9 @@
                                 <span class="blog__content__tag">
                                     Transportes no Brasil
                                 </span>
-                                <div class="blog__content__text">
+                                <h4 class="blog__content__text">
                                     Transporte coletivo | Uso da frota do transporte público de Joinville/SC
-                                </div>
+                                </h4>
                             </div>
                         </div>
                     </a>
@@ -1059,9 +1073,9 @@
                                 <span class="blog__content__tag">
                                     Transportadoras
                                 </span>
-                                <div class="blog__content__text">
+                                <h4 class="blog__content__text">
                                     Caminhões e máquinas agrícolas: veículos podem ser adquiridos por consórcio
-                                </div>
+                                </h4>
                             </div>
                         </div>
                     </a>
