--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="O maior Guia do Transporte do Brasil. Busque e encontre transportadoras credenciadas para a sua carga!">
+    <meta name="description"
+        content="O maior Guia do Transporte do Brasil. Busque e encontre transportadoras credenciadas para a sua carga!">
     <meta name="theme-color" content="#1565C0">
     <meta name="robots" content="index, follow">
     <meta name="Language" content="Portuguese">
@@ -22,8 +23,31 @@
     <title>O Melhor Guia de Transporte - Guia do Transporte</title>
     <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- CSS Personalizada -->
-    <link rel="stylesheet" href="css/style.css">
+    
+    <!-- CSS Main -->
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- CSS Home Header -->
+    <link rel="stylesheet" href="css/home__header.css">
+
+    <!-- CSS Quotation -->
+    <link rel="stylesheet" href="css/quotation.css">
+
+    <!-- CSS Explanation -->
+    <link rel="stylesheet" href="css/explanation.css">
+
+    <!-- CSS Rotes -->
+    <link rel="stylesheet" href="css/rotes.css">
+
+    <!-- CSS App -->
+    <link rel="stylesheet" href="css/app.css">
+
+    <!-- CSS Blog -->
+    <link rel="stylesheet" href="css/blog.css">
+
+    <!-- CSS Statistic -->
+    <link rel="stylesheet" href="css/statistic.css">
+
     <!-- CSS Font-Awesome -->
     <link rel="stylesheet" href="vendor/fontawesome-free-5.15.4-web/css/all.min.css">
 
@@ -38,7 +62,8 @@
         </a>
     </div>
 
-    <section class="cookie">
+    <!-- Cookie -->
+    <!-- <section class="cookie">
         <button class="cookie__close" type="button" role="button">
             <div class="cookie__close__btn"><i class="fas fa-times fa-lg"></i></div>
         </button>
@@ -56,22 +81,22 @@
                 Aceitar
             </button>
         </div>
-    </section>
+    </section> -->
 
     <!-- Barra de Navegação lateral -->
     <section id="sidebar">
         <div class="filter" id="filter--blue"></div>
         <div class="sidebar container">
             <div class="row">
-                <div class="col-12"> 
+                <div class="col-12">
                     <div class="sidebar__logo" title="Logo do Guia do Transporte"></div>
                 </div>
                 <ul class="sidebar__list" role="navigation" aria-expanded="true">
-                    <button role="button" class="sidebar__list__btn--close" title="Fechar o menu" tabindex="0"> 
-                    <i class="fas fa-times fa-lg">
+                    <button role="button" class="sidebar__list__btn--close" title="Fechar o menu" tabindex="0">
+                        <i class="fas fa-times fa-lg">
 
-                    </i> 
-                </button>
+                        </i>
+                    </button>
                     <span class="sr-only">Botão para fechar o menu</span>
                     <!-- Adicione a classe active na li quando for a página selecionada -->
                     <li class="sidebar__list__item active col-12" role="menuitem">
@@ -82,7 +107,8 @@
                     </li>
 
                     <li class="sidebar__list__item col-12" role="menuitem">
-                        <a href="transportadoras.html" class="d-flex" title="Transportadoras" tabindex="0" role="link" role="link">
+                        <a href="transportadoras.html" class="d-flex" title="Transportadoras" tabindex="0" role="link"
+                            role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-building fa-lg mx-2"></i></span>
                             Transportadoras
                         </a>
@@ -163,7 +189,8 @@
                 <ul class="topbar__list">
                     <li class="topbar__list__item" role="link">
                         <!-- Utilizar aria-current="page" quando for a página ativa -->
-                        <a href="index.html" class="text-uppercase" aria-current="page" title="Ir para o Inicio" tabindex="1">
+                        <a href="index.html" class="text-uppercase" aria-current="page" title="Ir para o Inicio"
+                            tabindex="1">
                             Inicio
                         </a>
                     </li>
@@ -240,7 +267,7 @@
                             </div>
                         </div>
                         <div class="col-lg-auto col-md-auto col-12">
-                            <button class="btn quotation__form__btn topbar__form__field rounded" role="button"
+                            <button class="btn quotation__form__btn topbar__form__field" role="button"
                                 type="submit">
                                 <span class="quotation__form__btn--icon" aria-hidden="true">
                                     <i class="fas fa-search fa-lg"></i>
@@ -307,7 +334,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-2 col-12">
-                        <button class="btn quotation__form__btn rounded" role="button" type="submit">
+                        <button class="btn quotation__form__btn" role="button" type="submit">
                             <span class="quotation__form__btn--icon" aria-hidden="true">
                                 <i class="fas fa-search fa-lg"></i>
                             </span>
@@ -1004,14 +1031,17 @@
                     <div class="col-md-3 d-none d-md-block">
                         <div class="app__image--cell">
                             <img src="img/celular-aplicativo.png" id="app__image--cell--anim"
-                                alt="Celular com o aplicativo do Guia do Transporte" title="Aplicativo Guia do Transporte">
+                                alt="Celular com o aplicativo do Guia do Transporte"
+                                title="Aplicativo Guia do Transporte">
                         </div>
                     </div>
                     <div class="col-md-9 col-12">
                         <div class="row">
                             <div class="col-12 d-block d-md-none">
                                 <div class="app__image--cell">
-                                    <img src="img/celular-aplicativo.png" alt="Celular com o aplicativo do Guia do Transporte" title="Aplicativo Guia do Transporte">
+                                    <img src="img/celular-aplicativo.png"
+                                        alt="Celular com o aplicativo do Guia do Transporte"
+                                        title="Aplicativo Guia do Transporte">
                                 </div>
                             </div>
                             <div class="col-12">
