--- a/index.html
+++ b/index.html
@@ -55,6 +55,33 @@
 </head>
 
 <body>
+    <!-- Loading -->
+    <div class="loading__background">
+        <div class="loading">
+            <div class="loading__head">
+                <div class="loading__head__detail">
+                </div>
+            </div>
+            <div class="loading__body">
+                <img src="img/logo-dark.png" class="loading__body__image" alt="">
+            </div>
+            <div class="loading__wheel --1">
+                <div class="loading__wheel__inside">
+                </div>
+            </div>
+            <div class="loading__wheel --2">
+                <div class="loading__wheel__inside">
+                </div>
+            </div>
+            <div class="loading__wheel --3">
+            </div>
+            <div class="loading__wheel --4">
+        
+            </div>
+            <img src="img/wind.png" class="loading__wind">
+        </div>
+    </div>
+
     <!-- Botão de voltar para o topo -->
     <div class="slidetop">
         <a href="#hero" class="btn slidetop__btn scroll-page" type="button" role="button">
