--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!-- CSS Home Header -->
-    <link rel="stylesheet" href="css/home__header.css">
+    <link rel="stylesheet" href="css/index/home__header.css">
 
     <!-- CSS Quotation -->
-    <link rel="stylesheet" href="css/quotation.css">
+    <link rel="stylesheet" href="css/index/quotation.css">
 
     <!-- CSS Explanation -->
-    <link rel="stylesheet" href="css/explanation.css">
+    <link rel="stylesheet" href="css/index/explanation.css">
 
     <!-- CSS Rotes -->
-    <link rel="stylesheet" href="css/rotes.css">
+    <link rel="stylesheet" href="css/index/rotes.css">
 
     <!-- CSS App -->
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/index/app.css">
 
     <!-- CSS Blog -->
-    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/index/blog.css">
 
     <!-- CSS Statistic -->
-    <link rel="stylesheet" href="css/statistic.css">
+    <link rel="stylesheet" href="css/index/statistic.css">
 
     <!-- CSS Font-Awesome -->
     <link rel="stylesheet" href="vendor/fontawesome-free-5.15.4-web/css/all.min.css">
@@ -165,7 +165,7 @@
                     </li>
 
                     <li class="sidebar__list__item col-12" role="menuitem">
-                        <a href="#" class="d-flex" title="Sobre Nós" tabindex="0" role="link">
+                        <a href="sobre-nos.html " class="d-flex" title="Sobre Nós" tabindex="0" role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-users fa-lg mx-2"></i></span>
                             Sobre Nós
                         </a>
@@ -1229,7 +1229,7 @@
                                 Alguns de nossos links
                             </h3>
                             <div class="footer__link">
-                                <a href="#" class="footer__link__item">
+                                <a href="sobre-nos.html" class="footer__link__item">
                                     Sobre nós
                                 </a>
                                 <a href="#" class="footer__link__item">
@@ -1298,7 +1298,7 @@
     <script src="js/jquery.counterup.min.js"></script>
 
     <!-- Importar meu arquivo Javascript -->
-    <script src="js/my.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
