--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
                     </li>
 
                     <li class="sidebar__list__item" role="menuitem" tabindex="0">
-                        <a href="#" class="d-flex" title="Políticas e Termos"  role="link">
+                        <a href="termos-de-servico.html" class="d-flex" title="Políticas e Termos"  role="link">
                             <span class="sidebar__list__item--icon"><i class="fas fa-book fa-lg mx-2"></i></span>
                             Políticas e Termos
                         </a>
                     </li>
 
                     <li class="sidebar__list__item" title="Cadastre-se" role="menuitem" tabindex="0">
-                        <a href="#" class="d-flex justify-content-center" role="link">
+                        <a href="cadastrar.html" class="d-flex justify-content-center" role="link">
                             <i class="fas fa-sign-in-alt fa-lg mx-2"></i> </span>
                             Cadastre-se
                         </a>
@@ -1228,7 +1228,7 @@
                                 <a href="#" class="footer__link__item" tabindex="0">
                                     Solicitar cotação
                                 </a>
-                                <a href="#" class="footer__link__item" tabindex="0">
+                                <a href="termos-de-servico.html" class="footer__link__item" tabindex="0">
                                     Políticas e Termos
                                 </a>
                             </div>
