--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             </div>
                         </div>
                         <div class="col-lg-auto col-md-auto col-12">
-                            <button class="btn quotation__form__btn topbar__form__field" role="button"
+                            <button class="btn quotation__form__btn btn__anim topbar__form__field" role="button"
                                 type="submit">
                                 <span class="quotation__form__btn--icon" aria-hidden="true">
                                     <i class="fas fa-search fa-lg"></i>
@@ -354,7 +354,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-2 col-12">
-                        <button tabindex="0" class="btn quotation__form__btn" role="button" type="submit">
+                        <button tabindex="0" class="btn quotation__form__btn btn__anim" role="button" type="submit">
                             <span class="quotation__form__btn--icon" aria-hidden="true">
                                 <i class="fas fa-search fa-lg"></i>
                             </span>
