webkit/modal/little fix index page

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
         </div>
     </section> -->
 
+    <!-- Botão de voltar para o topo -->
+    <div class="slidetop">
+        <a href="#hero" class="btn slidetop__btn scroll-page" type="button" role="button">
+            <i class="fas fa-arrow-up fa-lg"></i>
+        </a>
+    </div>
+
     <!-- Barra de Navegação lateral -->
     <section id="sidebar">
         <div class="filter" id="filter--blue"></div>
@@ -1109,7 +1116,7 @@
                     <a href="#" target="_blank" tabindex="0">
                         <div class="card blog__item">
                             <div class="blog__image">
-                                <img src="img/noticia2.png" alt="Noticia do Blog">
+                                <img src="img/noticia2.jpeg" alt="Noticia do Blog">
                             </div>
                             <div class="card-body blog__content">
                                 <span class="blog__content__tag">
@@ -1127,7 +1134,7 @@
                     <a href="#" target="_blank" tabindex="0">
                         <div class="card blog__item">
                             <div class="blog__image">
-                                <img src="img/noticia1.png" alt="Noticia do Blog">
+                                <img src="img/noticia1.jpeg" alt="Noticia do Blog">
                             </div>
                             <div class="card-body blog__content">
                                 <span class="blog__content__tag">
@@ -1144,7 +1151,7 @@
                     <a href="#" target="_blank" tabindex="0">
                         <div class="card blog__item">
                             <div class="blog__image">
-                                <img src="img/noticia3.png" alt="Noticia do Blog">
+                                <img src="img/noticia3.jpeg" alt="Noticia do Blog">
                             </div>
                             <div class="card-body blog__content">
                                 <span class="blog__content__tag">
@@ -1295,6 +1302,9 @@
 
     <!-- Importar Counter Up Javascript  -->
     <script src="js/counterUp.js"></script>
+
+    <!-- Importar Slideup Javascript -->
+    <script src="js/slideUp.js"></script>
 </body>
 
 </html>
