layout dos comentários da página das transportadoras / outros pequenos ajustes

--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@
                         </h3>
                     </div>
                 </div>
-                <article class="col-lg-4 col-md-6 col-12" role="article">
+                <article class="col-lg-4 col-md-6 col-12" role="article" title="Noticia">
                     <a href="#" target="_blank" tabindex="0">
                         <div class="card blog__item">
                             <div class="blog__image">
@@ -1130,7 +1130,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="col-lg-4 col-md-6 col-12" role="article">
+                <article class="col-lg-4 col-md-6 col-12" role="article" title="Noticia">
                     <a href="#" target="_blank" tabindex="0">
                         <div class="card blog__item">
                             <div class="blog__image">
@@ -1147,7 +1147,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="col-4 d-lg-block d-none" role="article">
+                <article class="col-4 d-lg-block d-none" role="article" title="Noticia">
                     <a href="#" target="_blank" tabindex="0">
                         <div class="card blog__item">
                             <div class="blog__image">
