--- a/transportadoras-item-preenchido.html
+++ b/transportadoras-item-preenchido.html
@@ -490,7 +490,7 @@
     <main>
 
         <!-- Breadcrumb -->
-        <section aria-label="breadcrumb" id="breadcrumb">
+        <section aria-label="breadcrumb">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -537,11 +537,11 @@
                                 </h1>
 
                                 <!-- Estrelas -->
-                                <div id="rating">
-                                    <i class="fas fa-star star"></i>
-                                    <i class="fas fa-star star"></i>
-                                    <i class="fas fa-star star"></i>
-                                    <i class="fas fa-star star"></i>
+                                <div>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active "></i>
                                     <i class="fas fa-star star"></i>
 
                                     <span class="sr-only sr-only-focusable">
@@ -714,11 +714,78 @@
                         <h2 class="trans__infos__title">Comentários</h2>
 
                         <div class="trans__infos__container">
-                            
-                            <!-- Comentários da Empresa -->
-                            <div class="trans__item__textfield">
-                                Ainda não há nenhum comentário. Seja o(a) primeiro(a) a comentar!
+
+                            <div class="trans__item__comments">
+
+                                <div class="trans__item__comment__name">
+                                    Elias Maluly
+
+                                    <span class="trans__item__comment__time">
+                                        2 semana(s) atrás
+                                    </span>
+                                </div>
+
+                                <div>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star"></i>
+                                    <i class="fas fa-star star"></i>
+                                </div>
+
+                                <div class="trans__item__comment">
+                                    Nossa, o guia é ótimo,é só colocar a origem e o destino que vem na hora mais de 15 transportadoras que fazem a rota e o serviço que você deseja.Recomendei até para um amigo  que tem uma transportadora e segundo ele as procuras por cotações na empresa dele aumentaram em mais de 50% depois de ter cadastrado a transportadora dele no guia,com uma média de 30 cotações por dia feitas pelo guia chegando para a transportadora dele atender. 
+                                </div>
+
                             </div>
+
+                            <div class="trans__item__comments">
+
+                                <div class="trans__item__comment__name">
+                                    Grupo Votorantim
+                                    <span class="trans__item__comment__time">
+                                        4 mês(es) atrás
+                                    </span>
+                                </div>
+
+                                <div>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                </div>
+
+                                <div class="trans__item__comment">
+                                    Muito bom nota 2
+                                </div>
+
+                            </div>
+
+                            <div class="trans__item__comments">
+
+                                <div class="trans__item__comment__name">
+                                    Brulekeh
+                                    <span class="trans__item__comment__time">
+                                        4 ano(s) atrás
+                                    </span>
+                                </div>
+
+                                <div>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star star__active"></i>
+                                    <i class="fas fa-star star"></i>
+                                </div>
+
+                                <div class="trans__item__comment">
+                                    Muito bom.
+                                    Está ajudando muito nas minhas distribuiçoes de cargas!!
+                                </div>
+
+                            </div>
+
                         </div>
 
                         <button class="btn trans__comments__btn btn__anim" type="button" role="button" onclick="toggleModal('comment__modal')">
