--- a/transportadoras.html
+++ b/transportadoras.html
@@ -778,6 +778,9 @@
 
     <!-- Importar meu arquivo Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Importar meu Slide Up -->
+    <script src="js/slideUp.js"></script>
 </body>
 
 </html>
