new Para Empresa page(dashboard)

--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -27,6 +27,9 @@
     <!-- CSS Main -->
     <link rel="stylesheet" href="css/main.css">
 
+    <!-- CSS Variaveis -->
+    <link rel="stylesheet" href="css/vars.css">
+
     <!-- CSS Hero Sobre Nós -->
     <link rel="stylesheet" href="css/sobre-nos/hero.css">
 
